--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "MissJuliaRobot",
+  "name": "Mr.SarcasticLover",
   "description": "A Telegram Group Management Bot",
   "logo": "https://telegra.ph/file/517f97b74ad036b2ef3c9.jpg",
   "keywords": ["telethon", "sqlalchemy", "mongodb"],
-  "repository": "https://github.com/MissJuliaRobot/MissJuliaRobot.git",
+  "repository": "https://github.com/MunnaBhai-01/MissJuliaRobot.git",
   "success_url": "http://missjuliarobot.unaux.com",
   "env": {
     "API_KEY": {
